Updated the setup files and included the bootswatch layout files.

--- a/Resources/public/less/bootstrap-setup.less
+++ b/Resources/public/less/bootstrap-setup.less
@@ -13,3 +13,7 @@
 
 // include the responsive after all of your stuff!
 @import "../../../../../../../twitter/bootstrap/v2/less/responsive.less";
+
+// include the bootswatch layout
+@import "variables.less";
+@import "bootswatch.less";
