--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -1,71 +1,16 @@
-{#% from 'MopaBootstrapBundle::flash.html.twig' import session_flash %#}
-<!DOCTYPE html>
+{% extends 'MopaBootstrapBundle::layout.html.twig' %}
 
-<html>
-<head>
-<meta charset="UTF-8" />
 {% block head_style %}
-{% stylesheets filter='less,?yui_css'
-   	'@ManhattanConsoleBundle/Resources/public/less/bootstrap-setup.less'
-   	'@ManhattanConsoleBundle/Resources/public/less/console.less'
+{% stylesheets filter='less,cssembed,?yui_css' 
+       '@ManhattanConsoleBundle/Resources/public/less/bootstrap-setup.less'
+       '@ManhattanConsoleBundle/Resources/public/less/console.less'
 %}
 <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
 {% endstylesheets %}
-
 {% endblock head_style %}
 
-{% block head_script %}
-{# Overwrite this block to add your own js here, to get them generated into final files #}
-{% endblock head_script %}
-
-<title>{% block title %}Management Console{% endblock %}</title>
-<link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
-</head>
-<body data-spy="scroll" data-target=".subnav" data-offset="50">
-    {% block navbar %}
-    {{ mopa_bootstrap_navbar('frontendNavbar') }}
-	{% endblock navbar %}
-
-	{% block container %}
-	<div class="container">
-      <div class="content">
-      	{% block page_header %}
-        <div class="page-header">
-              <h1>{% block headline %}Management Console{% endblock %}</h1>
-        </div>
-        {% endblock page_header %}
-		{% block flashes %}
-		    {#{ session_flash() }#}
-		{% endblock flashes %}
-		
-		{% block content %}
-	    <div class="row">
-			<div class="span9">
-				<strong>Content</strong>
-			</div>
-			<div class="span3">
-				{% block content_sidebar %}
-                <h2>Sidebar</h2>
-				{% endblock content_sidebar %}
-			</div>
-	    </div>
-		{% endblock content %}
-      </div>
-      <footer>
-        {% block footer %}
-        <p>&copy; <a href="http://www.frodosghost.com" target="_blank">Manhattan Management Console</a> 2011</p>
-        {% endblock footer %}
-      </footer>
-	</div> <!-- /container -->
-	{% endblock container %}
-	{% block foot_script %}
-	{# To only use a subset or add more js overwrite and copy paste this block }
-	{%- javascripts
-	    	'http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'
-	    	filter="?yui_js"
-	%}
-<script type="text/javascript" src="{{ asset_url }}"></script>
-{% endjavascripts %#}
-{% endblock foot_script %}
-</body>
-</html>
+{% block title %}Manhattan Management Console{% endblock %}
+{% block headline %}Manhattan Management Console{% endblock %}
+{% block footer %}
+<p>&copy; <a href="http://www.frodosghost.com" target="_blank">Manhattan Management Console</a> 2011</p>
+{% endblock footer %}
