--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -3,3 +3,12 @@ body {
 	background-color: #EDEDED;
     color: #555555;
 }
+form.actions-delete {
+	display: inline-block;
+    margin: 0 0 0 3px;
+    position: absolute;
+}
+form label {
+	font-weight: bold;
+	color: #3f3f3f;
+}
