Rewrite of the Prototype Mootools interface - moved into classes to extend DOM elements. Added additional code to the mootools-more. Added field formatting. Updated styling in the console.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -12,3 +12,27 @@ form label {
 	font-weight: bold;
 	color: #3f3f3f;
 }
+	form div.collection.controls .control-group {
+		margin-bottom: 5px;
+	}
+	form div.collection.controls .control-group .controls label {
+		display: inline-block;
+	}
+	div.collection.controls div.collection-item {
+		padding: 1%;
+		border: 1px solid #d0d0d0;
+		margin-bottom: 1%;
+	}
+
+	div.collection-item .action-container {
+		float: right;
+		width: auto;
+	}
+		div.collection-item .action-container .btn {
+			margin-left: 5px;
+			top: 0;
+		}
+
+	div.collection.controls div.collection-item.staged label {
+		color: #D4D4D4;
+	}
