Updated settings with menu and layout changes to do with site update.

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -9,6 +9,10 @@
 {% endstylesheets %}
 {% endblock head_style %}
 
+{% block navbar %}
+    {{ mopa_bootstrap_navbar('consoleNavbar') }}
+{% endblock navbar %}
+
 {% block title %}Manhattan Management Console{% endblock %}
 
 {% block headline %}Manhattan Management Console{% endblock %}
