--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -26,7 +26,9 @@
 	    	output="js/main.js"
 	    %}
 		<script type="text/javascript" src="{{ asset_url }}"></script>
+
 		{% endjavascripts %}
+		{{ tinymce_init() }}
 	{% endblock main_javascript %}
 
 	{% block page_javascript %}
