Updated views for styles because of layout update.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -36,3 +36,24 @@ form label {
 	div.collection.controls div.collection-item.staged label {
 		color: #D4D4D4;
 	}
+
+/* List Page
+   -------------*/
+div.content div.row {
+	margin: 18px 0;
+}
+	div.content div.row h1{
+		padding: 0 0 20px 0;
+	}
+
+div.content div.row table.table {
+	background: #F3F3F3;
+    border: 1px solid #DDDDDD;	
+}
+
+.records_list .actions {
+	width: 120px;
+}
+.records_list .title {
+	width: 60%;
+}
