Updated layout and bootstrap/bootswatch files to work with updated Mopa bundles.

--- a/Resources/public/less/bootstrap-setup.less
+++ b/Resources/public/less/bootstrap-setup.less
@@ -6,13 +6,13 @@
  */
 
 // Main bootstrap.less entry point
-@import "../../../../../../../twitter/bootstrap/v2/less/bootstrap.less";
+@import "../../../../../../../../twitter/bootstrap/less/bootstrap.less";
 
 // The Paginator less for MopaBootstrapBundle
-@import "../../../../../../Mopa/Bundle/BootstrapBundle/Resources/public/less/paginator.less";
+@import "../../../../../../../../mopa/bootstrap-bundle/Mopa/Bundle/BootstrapBundle/Resources/public/less/paginator.less";
 
 // include the responsive after all of your stuff!
-@import "../../../../../../../twitter/bootstrap/v2/less/responsive.less";
+@import "../../../../../../../../twitter/bootstrap/less/responsive.less";
 
 // include the bootswatch layout
 @import "variables.less";
