Commented out controller test. Updated layout and console styles.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -6,9 +6,19 @@ body {
 form.actions-delete {
 	display: inline-block;
     margin: 0 0 0 3px;
-    position: absolute;
+    position: relative;
+    float: right;
 }
 form label {
 	font-weight: bold;
 	color: #3f3f3f;
+}
+
+.main-display { 
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+.records_list.table.table-striped tbody {
+    background: #FCFCFC;
 }
