Manage image button to float on right.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -14,6 +14,12 @@ form label {
 	color: #3f3f3f;
 }
 
+form.form-horizontal.well { position: relative }
+form.form-horizontal.well a.btn.manage {
+    position: absolute;
+    right: 20px;
+}
+
 .main-display { 
     max-width: 1170px;
     margin: 0 auto;
