Updated layout of login page and positioning of form.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -30,6 +30,23 @@ form.form-horizontal.well a.btn.manage {
 }
 
 /*  ----------
+    :: Login Form
+    ---------- */
+.span4 .header { margin: 20px 0 30px }
+
+div.remember-me {
+    width: 100%;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+div.remember-me label,
+div.remember-me input {
+    float: left;
+    line-height: 1.5em;
+}
+    div.remember-me label { margin-left: 10px; }
+
+/*  ----------
     :: NavBar MainMenu Display
     ---------- */
 .menu-dropdown {
