--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -3,32 +3,39 @@
 {% block page_header %}{% endblock %}
 
 {% block fos_user_content %}
-<div class="row">
-    <div class="span6 offset2">
-    <h1>Login</h1>
-    <p>Please sign in with your <em>username</em> and <em>password</em>.</p>
-    {% if error %}
-        <div class="alert alert-error">{{ error|trans({}, 'FOSUserBundle') }}</div>
-    {% endif %}
+<div class="row-fluid">
+    <div class="span12">
+        <div class="span4"></div>
+        <div class="span4">
+            <div class="header">
+                <h1>Login</h1>
+                <p>Please sign in with your <em>username</em> and <em>password</em>.</p>
+            </div>
 
-    <form action="{{ path("fos_user_security_check") }}" class="form-stacked well" method="post" id="login">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-        <div>
-            <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+            {% if error %}
+                <div class="alert alert-error">{{ error|trans({}, 'FOSUserBundle') }}</div>
+            {% endif %}
+            <form action="{{ path("fos_user_security_check") }}" class="form-stacked well" method="post" id="login">
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                <div>
+                    <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
+                    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                </div>
+
+                <div>
+                    <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
+                    <input type="password" id="password" name="_password" />
+                </div>
+
+                <div class="remember-me">
+                    <input type="checkbox" id="remember_me" name="_remember_me" value="" />
+                    <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
+                </div>
+
+                <input type="submit" class="btn primary" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+            </form>
         </div>
-
-        <div>
-            <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-            <input type="password" id="password" name="_password" />
-        </div>
-
-        <div>
-            <input type="checkbox" id="remember_me" name="_remember_me" value="" />
-            <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
-
-        <input type="submit" class="btn primary" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
-    </form>
+        <div class="span4"></div>
     </div>
 </div>
 {% endblock fos_user_content %}
