--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -82,3 +82,16 @@ div.remember-me input {
     }
     .navbar .nav li.dropdown.active:hover { background: #E4E4E4 !important }
     .navbar .nav li.dropdown.active > .dropdown-toggle:hover { color: #333342; border-bottom: none; }
+
+/*  ----------
+    :: Footer
+    ---------- */
+footer {
+    border-top: 1px solid #E5E5E5;
+    margin-top: 45px;
+    padding: 35px 0 36px;
+}
+    footer p {
+        color: #555555;
+        margin-bottom: 0;
+    }
