Added forgotten password link. Changed reset URL in routing.

--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -34,6 +34,7 @@
 
                 <input type="submit" class="btn primary" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
             </form>
+            <a href="{{ path('fos_user_resetting_request') }}">Forgotten Password</a>
         </div>
         <div class="span4"></div>
     </div>
