Updated positioning of manage image navigation buttons.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -14,8 +14,8 @@ form label {
 	color: #3f3f3f;
 }
 
-form.form-horizontal.well { position: relative }
-form.form-horizontal.well a.btn.manage {
+.form-horizontal.well { position: relative }
+.form-horizontal.well a.btn.manage {
     position: absolute;
     right: 20px;
 }
@@ -28,6 +28,9 @@ form.form-horizontal.well a.btn.manage {
 .records_list.table.table-striped tbody {
     background: #FCFCFC;
 }
+
+#gallery_primary_photo_control_group .controls { margin-left: 0 }
+#gallery_primary_photo_control_group .controls .controls { margin-left: 160px }
 
 /*  ----------
     :: Login Form
