Added formatting for images on single display page.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -14,10 +14,17 @@ form label {
 	color: #3f3f3f;
 }
 
+/*  ----------
+    :: Manage Images
+    ---------- */
 .form-horizontal.well { position: relative }
 .form-horizontal.well a.btn.manage {
     position: absolute;
     right: 20px;
+}
+
+.manage .control-group {
+    padding: 20px 0;
 }
 
 .main-display { 
