Updated header styles on image page.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -17,6 +17,12 @@ form label {
 /*  ----------
     :: Manage Images
     ---------- */
+.manage h1 {
+    font-size: 1.4em;
+}
+.manage h1 span {
+    font-weight: normal;
+}
 .form-horizontal.well { position: relative }
 .form-horizontal.well a.btn.manage {
     position: absolute;
