--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -3,102 +3,9 @@
 
 {# Widgets #}
 
-
-{% block generic_label %}
-{% spaceless %}
-    {% if required %}
-        {% set attr = attr|merge({'class': attr.class|default('') ~ ' required'}) %}
-    {% endif %}
-    {% if prototype is defined %}
-        {% set attr = attr|merge({'data-prototype': null }) %}
-    {% endif %}
-    {% set attr = attr|merge({'class': attr.class|default('') ~ ' control-label'}) %}
-    <label{% for attrname,attrvalue in attr %} {{attrname}}="{{attrvalue}}"{% endfor %}>
-    {{ label|trans }}
-    {% if required %}*{% endif %}
-    {% if help_label %}
-        <p class="help-block">{{ help_label|trans }}</p>
-    {% endif %}
-    </label>
-{% endspaceless %}
+{% block preview_file_widget %}
+    {% spaceless %}
+        <div class="preview"><img src="{{ asset(preview) | imagine_filter('thumb') }}" /></div>
+        {{ block('form_widget_simple') }}
+    {% endspaceless %}
 {% endblock %}
-
-{% block field_widget_add_btn %}
-    {% if widget_add_btn %}
-    <input type="button" class="btn" data-collection-add-btn="{{ form.get('id')}}_control_group" value="{{ widget_add_btn }}">
-    {% endif %}
-{% endblock field_widget_add_btn %}
-
-{#}
-
-{% block form_widget %}
-{% spaceless %}
-    <div {{ block('widget_container_attributes') }}>
-        {{ block('field_rows') }}
-        {{ form_rest(form) }}
-    </div>
-{% endspaceless %}
-{% endblock form_widget %}
-
-{% block collection_widget %}
-{% spaceless %}
-    {% if errors|length > 0 %}
-        {% set attr = attr|merge({'class': attr.class|default('') ~ ' error'}) %}
-    {% endif %}
-    {{ block('form_widget') }}
-{% endspaceless %}
-{% endblock collection_widget %}
-
-{# Rows 
-
-{% block field_row %}
-{% spaceless %}
-    <div class="control-group">
-        {{ form_label(form, label|default(null)) }}
-        <div class="controls">
-        {{ form_widget(form) }}
-        {{ form_errors(form) }}
-        </div>
-    </div>
-{% endspaceless %}
-{% endblock field_row %}
-
-{% block field_label %}
-{% spaceless %}
-    {% set attr = attr|merge({'for': id, 'class': 'control-label'}) %}
-    {{ block('generic_label') }}
-{% endspaceless %}
-{% endblock field_label %}
-
-#}
-{# widget helper blocks #}
-
-{% block collection_row %}
-    {% set _isSubform = ('form' in form.get('types')) %}
-    {% set attr = attr|merge({'class': attr.class|default('') ~ (errors|length > 0 ? ' error' : '') }) %}
-    {% if widget_control_group %}
-        {% if prototype is defined %}
-            {% set attr = attr|merge({'data-prototype': form_row(prototype), 'data-collection': 'true' }) %}
-        {% endif %}
-        {% set oid = id %}
-        {% set id = oid ~ "_control_group" %}
-    <div class="collection control-group{% if errors|length > 0 %} error{% endif %}" {{ block('widget_attributes') }}>
-        {% set id = oid %}
-    {% endif %}
-    {{ block('form_label') }}
-    {% if widget_controls %}
-        <div class="collection controls">
-    {% endif %}
-    {{ form_widget(form) }}
-    {% if widget_controls %}
-            <div class="collection action">
-                {% if widget_add_btn %}
-                    {{ block('field_widget_add_btn') }}
-                {% endif %}
-            </div>
-        </div>
-    {% endif %}
-    {% if widget_control_group %}
-    </div>
-    {% endif %}
-{% endblock collection_row %}
