Added css for positioning of entity in form styles.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -57,8 +57,9 @@ div.manage a.btn.manage {
     padding-bottom: 10px;
 }
 
-#project_primary_photo_control_group .controls { margin-left: 0 }
-#project_primary_photo_control_group .controls .controls { margin-left: 160px }
+.entity-left.control-group .controls { margin-left: 0 }
+.entity-left.control-group .controls .controls { margin-left: 160px }
+
 
 /*  ----------
     :: Login Form
