Updated console bundle to include a telephone field type so can render a tel field for forms.

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -9,3 +9,10 @@
         {{ block('form_widget_simple') }}
     {% endspaceless %}
 {% endblock %}
+
+{% block telephone_widget %}
+{% spaceless %}
+    {% set type = type|default('tel') %}
+    {{ block('form_widget_simple') }}
+{% endspaceless %}
+{% endblock telephone_widget %}
