Updated console for display of message.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -16,6 +16,8 @@ form label {
 
 .page-header h1 span { font-weight: normal }
 
+.records_list table td .btn-mini { margin:0.4em 0 }
+
 /*  ----------
     :: Manage Images
     ---------- */
@@ -119,6 +121,16 @@ div.remember-me input {
         font-weight: bold;
         padding: 0.5em 1.0em;
     }
+
+    /*  ----------
+    :: Messages
+    ---------- */
+.content { position: relative;}
+#message.alert {
+    position: absolute;
+    right: 25px;
+    top: 0;
+}
 
 /*  ----------
     :: Footer
