Updated tinymce buttons that are included. Updated console styles for layout.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -52,6 +52,12 @@ div.manage a.btn.manage {
     background: #FCFCFC;
 }
 
+.separate-entity.entity-left {
+    border-top: 1px solid #E5E5E5;
+    padding: 10px 0;
+}
+
+
 /*  ----------
     :: Preview Images
     ---------- */
