Updated tree format for display.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -68,7 +68,25 @@ div.manage a.btn.manage {
 .entity-left.control-group .controls { margin-left: 0 }
 .entity-left.control-group .controls .controls { margin-left: 160px }
 
+/*  ----------
+    :: Nested Tree
+    ---------- */
+ul.nested-tree {
+    list-style: none;
+}
+ul.nested-tree a { font-weight: bold }
+ul.nested-tree ul a { font-weight: normal }
+ul.nested-tree li {
+    border-top: 1px solid #DDDDDD;
+    line-height: 18px;
+    padding: 10px 0;
+    text-align: left;
+    vertical-align: top;
+}
 
+ul.nested-tree ul {
+    padding: 10px 0;
+}
 /*  ----------
     :: Login Form
     ---------- */
