Updated display of the content list page styles for displaying publish state.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -73,12 +73,12 @@ div.manage a.btn.manage {
     ---------- */
 ul.nested-tree {
     list-style: none;
+    margin: 0 25px 10px;
 }
 ul.nested-tree a { font-weight: bold }
 ul.nested-tree ul a { font-weight: normal }
 ul.nested-tree li {
     border-top: 1px solid #DDDDDD;
-    line-height: 18px;
     padding: 10px 0;
     text-align: left;
     vertical-align: top;
@@ -87,6 +87,14 @@ ul.nested-tree li {
 ul.nested-tree ul {
     padding: 10px 0;
 }
+ul.nested-tree li .btn-small{
+    float: right;
+    text-align: center;
+    width: 70px;
+}
+    ul.nested-tree li .btn-small i {
+        margin-right: 15px;
+    }
 /*  ----------
     :: Login Form
     ---------- */
