Updated danger button display.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -3,7 +3,8 @@ body {
 	background-color: #EDEDED;
     color: #555555;
 }
-form.actions-delete {
+form.actions-delete,
+.manage .btn.btn-danger {
 	display: inline-block;
     margin: 0 0 0 3px;
     position: relative;
