Added ability to create user via own form building. Added validation to User form.

--- a/Resources/views/User/list.html.twig
+++ b/Resources/views/User/list.html.twig
@@ -32,7 +32,5 @@
     </tbody>
 </table>
 
-<a href="{{ path('fos_user_registration_register') }}"  class="btn primary">
-    Register New User
-</a>
+<a href="{{ path('console_users_new') }}" class="btn primary">Register New User</a>
 {% endblock %}
