--- a/Resources/views/User/edit.html.twig
+++ b/Resources/views/User/edit.html.twig
@@ -8,7 +8,8 @@
         <a href="{{ path('console_users') }}" class="btn">Back to the list</a>
         <button type="submit" class="btn btn-primary">Edit</button>
 </form>
-        <form action="{{ path('console_casestudy_delete', { 'id': entity.id }) }}" class="actions-delete" method="post">
+        <form action="{{ path('console_user_delete', { 'id': entity.id }) }}" class="actions-delete" method="post">
+            <input type="hidden" name="_method" value="DELETE" />
             {{ form_row(delete_form.id) }}
             {{ form_rest(delete_form) }}
             <button type="submit" class="btn btn-danger">Delete</button>
